2011-10-24  Phil Muldoon  <pmuldoon@redhat.com>

PR python/13310

	* python/py-param.c (call_doc_function): Correctly deference on
	function exit.